[gd_scene load_steps=35 format=2]

[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0017.png" type="Texture" id=1]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0018.png" type="Texture" id=2]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0011.png" type="Texture" id=3]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0007.png" type="Texture" id=4]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0004.png" type="Texture" id=5]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0006.png" type="Texture" id=6]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0010.png" type="Texture" id=7]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0015.png" type="Texture" id=8]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0005.png" type="Texture" id=9]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0013.png" type="Texture" id=10]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0019.png" type="Texture" id=11]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0009.png" type="Texture" id=12]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0016.png" type="Texture" id=13]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0012.png" type="Texture" id=14]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0014.png" type="Texture" id=15]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0008.png" type="Texture" id=16]
[ext_resource path="res://Animations/AlienAnimations/RocketIdle/rocket_idle0020.png" type="Texture" id=17]
[ext_resource path="res://Scenes/AlienBomb.gd" type="Script" id=18]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0005.png" type="Texture" id=19]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0004.png" type="Texture" id=20]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0008.png" type="Texture" id=21]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0001.png" type="Texture" id=22]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0006.png" type="Texture" id=23]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0007.png" type="Texture" id=24]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0011.png" type="Texture" id=25]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0009.png" type="Texture" id=26]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0002.png" type="Texture" id=27]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0000.png" type="Texture" id=28]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0010.png" type="Texture" id=29]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0003.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 40.05

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 26 ), ExtResource( 29 ), ExtResource( 25 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 80.895

[node name="AlienDropBomb" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -3.14159
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 0.835294, 0.564706, 0.34902, 1 )
frames = SubResource( 3 )
frame = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 4 )
disabled = true

[connection signal="body_entered" from="." to="." method="_on_AlienBomb_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_AnimatedSprite2_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_Area2D_body_entered"]
